@@ -119,6 +119,11 @@ plugin {
     acl = vfile
     acl_shared_dict = proxy::acl
 
+    # By default Dovecot doesn't allow using the IMAP "anyone" or
+    # "authenticated" identifier, because it would be an easy way to spam
+    # other users in the system. If you wish to allow it,
+    #acl_anyone = allow
+
     # Pigeonhole managesieve service.
     # Reference: http://wiki2.dovecot.org/Pigeonhole/Sieve/Configuration
     # Per-user sieve settings.
