@@ -277,6 +277,12 @@ CREATE TABLE IF NOT EXISTS share_folder (
     INDEX (to_user)
 );
 
+CREATE TABLE IF NOT EXISTS anyone_shares (
+    from_user VARCHAR(255) NOT NULL,
+    dummy CHAR(1) DEFAULT '1',
+    PRIMARY KEY (from_user)
+);
+
 #
 # Table `used_quota`. Used to store realtime mailbox quota in Dovecot.
 # WARNING: Works only with Dovecot 1.2+.
