@@ -2,6 +2,8 @@ iRedMail-0.8.1:
     * Enforce connections over https in Roundcube.
     * Fix incorrect MySQL user password and databases in MySQL backup script.
     * Fixed:
+        + Add missing config and SQL table required for sharing IMAP folder to
+          anyone. Thanks BigMichi1 <bigmichi1 _at_ bigmichi1.de>.
         + Add missing auth service in Dovecot-2: auth-userdb.
         + Add new LDAP attribute and SQL column required by Dovecot-2 share folder:
           enabledService=lib-storage (ldap), enablelib-storage=1 (SQL).
